--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,10 +2,8 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
-    branches: [ master ]
-    
-    
-    
+    branches-ignore: [ ]
+
 jobs:
   build-and-run:
     runs-on: ubuntu-latest
