--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -5,7 +5,7 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
     branches:
-      - master
+      - main
 
 # Trabajos por hacer
 jobs: 
